# enc_sin

./: CMakeLists.txt  README.md  bgv_test.cpp  build.sh  polynomial_mult_test.cpp  sin_adam_bashforth.m  sin_first_order.m  sin_he.cpp  sin_taylor.cpp  sin_taylor_decomp.cpp  sin_taylor_fifth.cpp  sin_taylor_plain.cpp  sin_taylor_third.cpp  slotwise_poly_mult_test.cpp  talyor.m
